# LLVM_middleend_template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
src/: CatCallInstVisitor.cpp  CatCallInstVisitor.hpp  CatConstantFoldingProcessor.cpp  CatConstantFoldingProcessor.hpp  CatConstantPropagationProcessor.cpp  CatConstantPropagationProcessor.hpp  CatDataDependencies.cpp  CatDataDependencies.hpp  CatDataDependencyProcessor.cpp  CatDataDependencyProcessor.hpp  CatFunction.cpp  CatFunction.hpp  CatGenKillVisitor.cpp  CatGenKillVisitor.hpp  CatInOutProcessor.cpp  CatInOutProcessor.hpp  CatInOutVisitor.cpp  CatInOutVisitor.hpp  CatInstructionVisitor.cpp  CatInstructionVisitor.hpp  CatPass.cpp  CatVariableModificationVisitor.cpp  CatVariableModificationVisitor.hpp  DataStructureOutput.cpp  DataStructureOutput.hpp
